--- a/src/Components/Candidate/CandidateDashBoard/PersonalDetails/PersonalDetails.css
+++ b/src/Components/Candidate/CandidateDashBoard/PersonalDetails/PersonalDetails.css
@@ -256,3 +256,33 @@
     margin-top: 8px;
     border: 1px solid var(--borderColor);
 }
+
+@media only screen and (max-width: 600px) {
+    .personalOverlay {
+        width: 100%;
+        height: 100%;
+    }
+
+    .updatePersonalDetails {
+        overflow-y: scroll;
+        padding: 20px;
+    }
+
+    .innerPersonalDetails {
+        height: 10%;
+    }
+
+    .updatePersonalDetailsFlex {
+        flex-direction: column;
+    }
+
+    .updatePersonalDetailsRight {
+        width: 100%;
+        margin-left: 0px;
+    }
+
+    .updatePersonalDetailsLeft {
+        width: 100%;
+        margin-right: 0px;
+    }
+}
