--- a/src/Components/Candidate/CandidateDashBoard/VideoResume/VideoResume.css
+++ b/src/Components/Candidate/CandidateDashBoard/VideoResume/VideoResume.css
@@ -156,3 +156,23 @@
     background-color: var(--primaryColor);
     margin-left: 20px;
 }
+
+@media only screen and (max-width: 600px) {
+    .vedioResumeButtons {
+        flex-direction: column;
+        padding: 20px;
+
+    }
+
+    .discard {
+        width: 100%;
+        padding: 5px 10px;
+    }
+
+    .save {
+        width: 100%;
+        padding: 5px 10px;
+        margin-left: 0%;
+        margin-top: 15px;
+    }
+}
