--- a/src/Components/Reusable/DashBoardReusable/DashHead/DashHead.css
+++ b/src/Components/Reusable/DashBoardReusable/DashHead/DashHead.css
@@ -1,7 +1,5 @@
 .dashBoardMainHead {
     padding: 50px 0px;
-
-
 }
 
 .dashBoardMainHead h1 {
@@ -105,4 +103,24 @@
     font-size: 15px;
     opacity: 0.5;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 600px) {
+    .dashBoardMainHead h1 {
+        font-size: 25px;
+    }
+
+    .dashBoardMainHeadDescBetween {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .dashBoardMainHeadDescBetween p {
+        font-size: 14px;
+    }
+
+    .dashBoardMainHead {
+        padding: 30px 0px;
+        padding-top: 15px;
+    }
 }
