--- a/src/Components/Candidate/CandidateDashBoard/VideoResume/VideoResume.css
+++ b/src/Components/Candidate/CandidateDashBoard/VideoResume/VideoResume.css
@@ -175,4 +175,14 @@
         margin-left: 0%;
         margin-top: 15px;
     }
+
+    .vedioOverlay {
+        width: 100%;
+        height: 100%;
+    }
+
+    .innerVideoResumeOverlay {
+        height: 100%;
+        overflow-y: scroll;
+    }
 }
