--- a/src/Components/Candidate/CandidateDashBoard/WorkExperience/WorkExperience.css
+++ b/src/Components/Candidate/CandidateDashBoard/WorkExperience/WorkExperience.css
@@ -1,15 +1,15 @@
 .workExperience {
     width: 100%;
     height: 100%;
-    padding-bottom: 15px;
+    margin-bottom: 15px;
+    border-radius: 8px;
+    border: 1px solid var(--dropBorderColor);
 }
 
 .innerWorkExperience {
     width: 100%;
     height: auto;
     border-radius: 8px;
-    /* background-color: green; */
-    border: 1px solid var(--dropBorderColor);
 }
 
 .workExperienceHeadLeft {
@@ -239,7 +239,7 @@
 }
 
 .workExperinceOverlayFlex {
-    width: 99%;
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -252,14 +252,14 @@
 }
 
 .workExperinceOverlayLeft {
-    width: 100%;
+    width: 48%;
     height: 100%;
     display: flex;
     flex-direction: column;
 }
 
 .workExperinceOverlayRight {
-    width: 100%;
+    width: 48%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -436,4 +436,24 @@
 .workExperinceOverlayFlex::-webkit-scrollbar-thumb {
     border-radius: 10px;
     background-color: #d4d4d8;
+}
+
+@media only screen and (max-width: 600px) {
+    .workExperinceOverlay {
+        width: 100%;
+        height: 100%;
+    }
+
+    .workExperinceOverlayFlex {
+        flex-direction: column;
+    }
+
+    .workExperinceOverlayLeft {
+        width: 100%;
+    }
+
+    .workExperinceOverlayRight {
+        width: 100%;
+
+    }
 }
