--- a/src/Components/Reusable/SearchProfileCard/SearchProfileCard.css
+++ b/src/Components/Reusable/SearchProfileCard/SearchProfileCard.css
@@ -3,7 +3,7 @@
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     padding-top: 5px;
 }
 
