--- a/src/Components/AdminScreen/AdminProfile/AClientProfileview/AClientProfileView.css
+++ b/src/Components/AdminScreen/AdminProfile/AClientProfileview/AClientProfileView.css
@@ -2,6 +2,11 @@
     padding: 30px 0px;
 }
 
+.clientProfileOverview {
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
 .ClientProfileBackButton {
     display: flex;
     align-items: center;
@@ -100,9 +105,10 @@
     border-radius: 8px;
     margin-left: 10px;
 }
-.disable_Profile{
+
+.disable_Profile {
     font-size: 19px;
-    background-color:lightgray;
+    background-color: lightgray;
     padding: 8px 10px;
     border: 1px solid var(--borderColor);
     border-radius: 8px;
@@ -249,4 +255,99 @@
     color: var(--textColor);
     padding: 12px 0px;
     text-transform: capitalize;
+}
+
+.clientProfileViewHeaderMob {
+    display: none;
+}
+
+
+@media only screen and (max-width: 600px) {
+    .clientProfileViewFlex {
+        flex-direction: column;
+        border: 1px solid var(--borderColor);
+        padding: 15px;
+        border-radius: 8px;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+
+    .ClientProfileViewCard {
+        margin-top: 25px;
+    }
+
+    .clientViewTabActive {
+        font-size: 13px;
+    }
+
+    .clientViewTabInactive {
+        font-size: 13px;
+    }
+
+    .ClientProfileViewCardBodyTable h2 {
+        width: 50%;
+    }
+
+    .ClientProfileViewCardEdit button {
+        padding: 5px 10px;
+    }
+
+    .ClientProfileViewCard h1 {
+        width: 70%;
+    }
+
+    .clientProfileViewHeader {
+        display: none;
+    }
+
+    .clientProfileViewHeaderMob {
+        display: block;
+        padding: 20px 0px;
+    }
+
+    .ClientProfileBackButton h5 {
+        font-weight: 600;
+        margin-left: 5px;
+    }
+
+    .clientProfileViewFlexRightMob {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 15px;
+    }
+
+    .editRate {
+        width: 100%;
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
+
+    .clientProfileViewFlex {
+        background-color: var(--dropColor);
+    }
+
+    .disableProfile {
+        font-size: 12px;
+        width: 48%;
+        font-weight: 600;
+        margin-left: 0px;
+        padding: 15px 10px;
+    }
+
+    .clientProfileViewFlexRightButtonMob {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 15px;
+        padding-bottom: 15px;
+        border-bottom: 1px solid var(--borderColor);
+    }
+
 }
