--- a/src/Components/AdminScreen/AdminProfile/ACandidateProfileView/ACandidateProfileView.css
+++ b/src/Components/AdminScreen/AdminProfile/ACandidateProfileView/ACandidateProfileView.css
@@ -157,6 +157,9 @@
     padding: 15px 20px;
     font-size: 16px;
     font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
     background-color: var(--dropColor);
@@ -301,4 +304,50 @@
 
 }
 
-.cancelApprove {}
+@media only screen and (max-width: 600px) {
+    .calendlyLink {
+        width: 100%;
+        padding-top: 15px;
+    }
+
+    .calendlyLink h5 {
+        top: 64%;
+    }
+
+    .calendlyLink input {
+        padding: 10px;
+        padding-right: 45px;
+    }
+
+    /* overlay */
+    .adminEditOverlay {
+        width: 100%;
+        height: 100%;
+
+    }
+
+    .adminEditOverlayBody {
+        height: 100%;
+        grid-template-columns: repeat(1, 1fr);
+        overflow-y: scroll;
+    }
+
+    .editOverlayButton {
+        padding: 20px;
+        flex-direction: column;
+
+    }
+
+    .adminEditAddMore {
+        width: 88.5%;
+        margin-bottom: 0px;
+    }
+
+    .approveCandidateOverlay {
+        width: 90%;
+    }
+
+    .approveCandidateOverlayButton {
+        flex-direction: column
+    }
+}
