client and candidate admin view button alters

--- a/src/Components/AdminScreen/AdminProfile/AClientProfileview/AClientProfileView.css
+++ b/src/Components/AdminScreen/AdminProfile/AClientProfileview/AClientProfileView.css
@@ -171,6 +171,40 @@
     background-color: #FEE2E2;
 }
 
+.approvalMenu1 {
+    padding: 10px;
+    z-index: 10 !important;
+    position: absolute;
+    background-color: var(--white);
+    border: 1px solid var(--borderColor);
+    border-radius: 8px;
+    top: 37%;
+    right: 7%;
+
+}
+
+.approvalMenu1Active {
+    font-size: 14px;
+    font-weight: 500;
+    padding: 5px 10px;
+    border-radius: 8px;
+    margin-bottom: 5px;
+    cursor: pointer;
+    color: var(--primaryColor);
+    background-color: var(--approveColor);
+}
+
+.approvalMenu1Disable {
+    font-size: 14px;
+    font-weight: 500;
+    padding: 5px 10px;
+    margin-top: 5px;
+    border-radius: 8px;
+    cursor: pointer;
+    color: #EF4444;
+    background-color: #FEE2E2;
+}
+
 /* tab */
 .clientViewTab {
     width: 100%;
@@ -310,6 +344,16 @@
         margin-left: 5px;
     }
 
+    .clientProfileViewFlexRightMobCandidate {
+        width: 100%;
+        display: flex;
+        /* flex-direction: column; */
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 15px;
+        column-gap: 15px;
+    }
+
     .clientProfileViewFlexRightMob {
         width: 100%;
         display: flex;
@@ -320,7 +364,7 @@
     }
 
     .editRate {
-        width: 100%;
+        width: 90%;
         padding: 10px;
         display: flex;
         align-items: center;
@@ -340,6 +384,16 @@
         padding: 15px 10px;
     }
 
+    .disableProfileCandidate {
+        font-size: 16px;
+        /* width: 10%; */
+        font-weight: 600;
+        margin-left: 0px;
+        padding: 13px 14px;
+        border: 1px solid var(--borderColor);
+        border-radius: 8px;
+    }
+
     .clientProfileViewFlexRightButtonMob {
         width: 100%;
         display: flex;
@@ -348,6 +402,14 @@
         margin-top: 15px;
         padding-bottom: 15px;
         border-bottom: 1px solid var(--borderColor);
+    }
+
+    .clientProfileViewFlexRightButtonMobClient {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 15px;
     }
 
 }
