--- a/src/Components/AdminScreen/AdminProfile/AdminCandidateProfile/AdminCandidateProfile.css
+++ b/src/Components/AdminScreen/AdminProfile/AdminCandidateProfile/AdminCandidateProfile.css
@@ -5,10 +5,6 @@
     margin-bottom: 30px;
 }
 
-.adminProfile {
-    padding-left: 25px;
-    padding-right: 25px;
-}
 
 .customerView {
     padding-left: 0px;
@@ -192,10 +188,19 @@
 
 }
 
+.shortListButton1 {
+    width: 100%;
+    display: flex;
+    /* flex-direction: column; */
+    align-items: center;
+    justify-content: flex-start;
+
+}
+
 
 .shortListButtonDisable {
     width: 200px;
-    padding: 10px;
+    padding: 8px;
     border: 1px solid var(--borderColor);
     margin-right: 15px;
     border-radius: 8px;
@@ -203,7 +208,7 @@
 
 .shortListButtonActive {
     width: 200px;
-    padding: 10px;
+    padding: 8px;
     border: 1px solid var(--borderColor);
     margin-right: 15px;
     border-radius: 8px;
@@ -264,6 +269,11 @@ nav {
 }
 
 @media only screen and (max-width: 600px) {
+    .adminProfile {
+        padding-left: 25px;
+        padding-right: 25px;
+    }
+
     .shortListButton {
         width: 100%;
         flex-direction: column;
@@ -292,7 +302,6 @@ nav {
     .shortListButton1 {
         width: 100%;
         display: flex;
-        /* flex-direction: column; */
         align-items: center;
         justify-content: space-between;
     }
