--- a/src/Components/Client/ClientSignUp/Registration/RegistrationComp.css
+++ b/src/Components/Client/ClientSignUp/Registration/RegistrationComp.css
@@ -687,4 +687,13 @@
         text-align: center;
         padding: 10px 0px;
     }
+    .detailsGrid {
+        display: flex;
+        align-items: flex-end;
+        justify-content: flex-end;
+        display: grid;
+        grid-template-columns: repeat(1,4fr);
+        grid-gap: 20px;
+        padding: 10px 0px 0px 0px;
+    }
 }
