--- a/src/Components/Candidate/CandidateSignUp/CandidateRegistration/CandidateRegistration.css
+++ b/src/Components/Candidate/CandidateSignUp/CandidateRegistration/CandidateRegistration.css
@@ -271,11 +271,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* background-color: red; */
 }
 
 .candidateInfo p select {
-    width: auto;
+    width: 100%;
     height: 30px;
     padding: 2px;
 
