--- a/src/Components/Client/ClientScreen/InterviewComp/InterviewComp.css
+++ b/src/Components/Client/ClientScreen/InterviewComp/InterviewComp.css
@@ -11,3 +11,10 @@
     grid-template-columns: repeat(2, 1fr);
 
 }
+
+@media only screen and (max-width: 600px) {
+    .interviewCard {
+        grid-template-columns: repeat(1, 1fr);
+        padding-left: 22px;
+    }
+}
