--- a/src/Components/Reusable/CandidateProfileCard/CandidateProfileCard.css
+++ b/src/Components/Reusable/CandidateProfileCard/CandidateProfileCard.css
@@ -1033,3 +1033,21 @@ progress.progress_bar::-webkit-progress-value {
     border-radius: 10px;
     background-color: #d4d4d8;
 }
+
+@media only screen and (max-width: 600px) {
+
+    .proExperienceWrap {
+        padding-bottom: 15px;
+        border-bottom: 1px solid var(--borderColor);
+    }
+
+    .video img {
+        height: 150px;
+    }
+
+    .employ {
+        padding-left: 0%;
+        padding-right: 0%;
+        padding-top: 20px;
+    }
+}
