--- a/src/Components/Reusable/SearchProfileCard/SearchProfileCard.css
+++ b/src/Components/Reusable/SearchProfileCard/SearchProfileCard.css
@@ -211,3 +211,35 @@
     border: 1px solid var(--borderColor);
 
 }
+
+@media only screen and (max-width: 600px) {
+    .clientCarts1 {
+        width: 280px;
+    }
+
+    .candidateCartExperience {
+        grid-template-columns: repeat(1, 1fr);
+        margin-top: 10px;
+        /* margin-bottom: 10px; */
+    }
+
+    .cartbtnimg {
+        height: 100%;
+        flex-wrap: wrap;
+    }
+
+    .cartbtnimgbutton1 {
+        padding: 5px;
+        width: 80%;
+        margin-left: 0px;
+    }
+
+    .cartbtnimgbutton2 {
+        padding: 5px;
+        margin-left: 0%;
+    }
+
+    .candidateCartProfile {
+        flex-wrap: wrap;
+    }
+}
