--- a/src/index.css
+++ b/src/index.css
@@ -117,7 +117,7 @@ code {
 
 @media only screen and (max-width: 600px) {
   .displayHandler {
-    display: none;
+    display: none !important;
   }
 
   .displayHandlerMob {
