--- a/src/Components/AdminScreen/AdminProfile/ACandidateProfileView/ACandidateProfileView.css
+++ b/src/Components/AdminScreen/AdminProfile/ACandidateProfileView/ACandidateProfileView.css
@@ -141,6 +141,8 @@
 /* admin edit overlay */
 .adminEditOverlay {
     width: 60%;
+    height: 60%;
+    overflow-y: scroll;
     background-color: white;
     display: flex;
     z-index: 10 !important;
