--- a/src/Components/Candidate/CandidateDashBoard/Education/Education.css
+++ b/src/Components/Candidate/CandidateDashBoard/Education/Education.css
@@ -122,7 +122,7 @@
 /* overlay */
 .educationDescOverlay {
     width: 65%;
-    height: auto;
+    height: 80%;
     background-color: white;
     display: flex;
     z-index: 10 !important;
@@ -133,6 +133,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    overflow-y: scroll;
 }
 
 .educationDescOverlay h6 {
