--- a/src/Components/Candidate/CandidateDashBoard/ProjectDetails/ProjectDetails.css
+++ b/src/Components/Candidate/CandidateDashBoard/ProjectDetails/ProjectDetails.css
@@ -163,7 +163,7 @@
 /* overlay */
 .projectDetailsOverlay {
     width: 65%;
-    height: auto;
+    height: 80%;
     background-color: white;
     display: flex;
     z-index: 10 !important;
@@ -174,6 +174,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    overflow-y: scroll;
 }
 
 .projectDetailsOverlay h6 {
