--- a/src/Components/Client/ClientScreen/DiscoverComp/DiscoverComp.css
+++ b/src/Components/Client/ClientScreen/DiscoverComp/DiscoverComp.css
@@ -340,4 +340,25 @@
     .clientDiscoverOuter {
         padding: 0px;
     }
+
+    .reserveCandidate {
+        width: 100%;
+        height: 100%;
+    }
+
+    .reserveCandidateFlex {
+        height: 100%;
+        overflow-y: scroll;
+        flex-direction: column;
+    }
+
+    .reserveCandidateFlexLeft {
+        width: 100%;
+    }
+
+    .reserveCandidateFlexRight {
+        width: 100%;
+        margin-left: 0%;
+        margin-top: 10px;
+    }
 }
