--- a/src/Components/AdminScreen/AdminProfile/AClientProfileview/AClientProfileView.css
+++ b/src/Components/AdminScreen/AdminProfile/AClientProfileview/AClientProfileView.css
@@ -101,6 +101,16 @@
     margin-left: 10px;
 }
 
+.delete_btn {
+    font-size: 14px;
+    background-color: #b3003c;
+    padding: 8px 10px;
+    border: 1px solid var(--borderColor);
+    border-radius: 8px;
+    margin-left: 10px;
+    color: white;
+}
+
 .disable_Profile {
     font-size: 14px;
     background-color: lightgray;
