--- a/src/Components/Candidate/CandidateSignUp/CandidateRegistration/CandidateRegistration.css
+++ b/src/Components/Candidate/CandidateSignUp/CandidateRegistration/CandidateRegistration.css
@@ -275,7 +275,7 @@
 }
 
 .candidateInfo p select {
-    width: auto;
+    width: 100%;
     height: 30px;
     padding: 2px;
 
@@ -659,7 +659,7 @@
 }
 
 .skillbtn {
-    width: auto;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -1293,6 +1293,7 @@
         justify-content: center;
 
     }
+
     .candidateRegistration1[title] {
         width: 100%;
         display: flex;
