--- a/src/Components/AdminScreen/AdminProfile/ACandidateProfileView/ACandidateProfileView.css
+++ b/src/Components/AdminScreen/AdminProfile/ACandidateProfileView/ACandidateProfileView.css
@@ -141,8 +141,8 @@
 /* admin edit overlay */
 .adminEditOverlay {
     width: 60%;
-    height: 60%;
-    overflow-y: scroll;
+    height: 70%;
+    /* overflow-y: scroll; */
     background-color: white;
     display: flex;
     z-index: 10 !important;
@@ -211,6 +211,8 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 25px;
+    height: 77%;
+    overflow-y: scroll;
 }
 
 .adminEditOverlayBody h2 {
@@ -238,7 +240,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    padding: 0px 20px 20px 20px;
+    padding: 10px 20px 20px 20px;
 
 }
 
