--- a/src/Components/AdminScreen/AdminContract/AdminContract.css
+++ b/src/Components/AdminScreen/AdminContract/AdminContract.css
@@ -1,12 +1,13 @@
-.adminContractCard{
-display: flex;
-align-items: center;
-justify-content: center;
-display: grid;
-grid-template-columns: repeat(2,2fr);
-grid-gap: 20px;
+.adminContractCard {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    grid-gap: 20px;
 }
-.addContractCard{
+
+.addContractCard {
     width: 100%;
     height: 100%;
     border-radius: 10px;
@@ -14,8 +15,10 @@ grid-gap: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 30px;
 }
-.addContractCard p{
+
+.addContractCard p {
     color: #71717A;
     font-size: 15px;
     font-weight: 500;
